<?xml version="1.0"?>
<package format="3">
  <name>pan_tilt_bringup</name>
  <version>1.0.0</version>
  <description>The pan_tilt_bringup package</description>

  <!-- Author -->
  <maintainer email="lei.yan@iquotient-robotics.com">QuartzYan</maintainer>

  <!-- License -->
  <license>MIT</license>
  
  <!-- depend -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
