<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pan_tilt_msgs</name>
  <version>1.0.0</version>
  <description>The pan_tilt_msgs package</description>

  <!-- Author -->
  <maintainer email="lei.yan@iquotient-robotics.com">QuartzYan</maintainer>

  <!-- License -->
  <license>MIT</license>
  
  <!-- depend -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>std_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <build_depend>rosidl_default_generators</build_depend>  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
